# coq-graph2tac-trained

./: Graph2TacConfig.v.in  README.md  coq-graph2tac.opam  injection-flags  params.yaml  prerequisites  update-env
benchmark-data/0d498b9a13814592562e5edbcc25450912887201/Set-Tactician-Benchmark-40./: combined.bench
benchmark-data/4956d3df31cb8d0d3950199d0d3b63462e58f50b/Set-Tactician-Benchmark-40./: combined.bench
benchmark-data/6be728fd18268c9831dfe84aaa9e42cbd4f57702/Set-Tactician-Benchmark-40./: combined.bench
benchmark-data/81deb86edead62d54fac8b67882d89f0ac312d63/Set-Tactician-Benchmark-40./: combined.bench
benchmark-data/9682e5bf95d708edd3773f40578e92161b45d277/Set-Tactician-Benchmark-40./: combined.bench
benchmark-data/e768cbdbe27837823c4973f68110b13e85b7c760/Set-Tactician-Benchmark-40./: combined.bench
