opam-version: "2.0"
synopsis: "Graph neural network that predicts tactics for Tactician"
description: ""
maintainer: ["Lasse Blaauwbroek <lasse@blaauwbroek.eu>"]
authors: [
  "Lasse Blaauwbroek"
  "Mirek Olsak"
  "Vasily Pestun"
  "Jelle Piepenbrock"
  "Jason Rute"
  "Fidel I. Schaposnik Massolo"
]
homepage: "https://coq-tactician.github.io"
bug-reports:
  "https://github.com/pestun/graph2tac/issues"
build: [
]
install: [
]
dev-repo: "git+https://github.com/pestun/graph2tac.git"
depends: [
  "coq-tactician-api"
  "coq-tactician"
]
