opam-version: "2.0"
synopsis: "Graph neural network that predicts tactics for Tactician"
description: ""
maintainer: ["Lasse Blaauwbroek <lasse@blaauwbroek.eu>"]
authors: [
  "Lasse Blaauwbroek"
  "Mirek Olsak"
  "Vasily Pestun"
  "Jelle Piepenbrock"
  "Jason Rute"
  "Fidel I. Schaposnik Massolo"
]
homepage: "https://coq-tactician.github.io"
bug-reports:
  "https://github.com/pestun/graph2tac/issues"
build: [
  [ "tar" "-xzf" "model.tar.gz" "--one-top-level" "--strip-components" "1" ]
]
install: [
  [ "mkdir" "-p" "%{share}%/%{name}%/" ]
  [ "cp" "-r" "model/" "%{share}%/%{name}%/" ]

  [ "cp" "Graph2TacConfig.v" "%{lib}%/coq/user-contrib/Tactician/Graph2TacConfig.v" ]

  # We have to make sure that our injection flags get loaded after the injection flags of coq-tactician-api.
  # We do this by using a name that is guaranteed to sort after coq-tactician-api.
  [ "mkdir" "-p" "%{share}%/coq-tactician/plugins/coq-tactician-api-%{name}%/" ]
  [ "cp" "injection-flags" "%{share}%/coq-tactician/plugins/coq-tactician-api-%{name}%/" ]
]
dev-repo: "git+https://github.com/pestun/graph2tac.git"
pin-depends: [
  [
    "coq-tactician.8.11.dev"
    "git+https://github.com/coq-tactician/coq-tactician.git#9224b136ee7823d4776301035d9455f56c8c16b1"
  ]
  [
    "coq-tactician-api.8.11.dev"
    "git+ssh://git@github.com/coq-tactician/coq-tactician-api.git#b883ae596b9522e471065c908b1b7ba653fd8d7d"
  ]
]
depends: [
  "coq-tactician-api"
  "coq-tactician"
]
extra-source "model.tar.gz" {
  src: "http://64.71.146.254:8000/SFyud_C5TmEq7AwnK9jaLsfTFMzgBl54cQ0pl2FJB-x9o2Hk24F4jO_W75RqGdOJ/weights/2023-05-26_C_tfgnn_v15_opam-training_main_no-names_continued_epoch247.746f36f4d45c9557f9d4ec62a0c1e07e.tar.gz"
  checksum: "md5=746f36f4d45c9557f9d4ec62a0c1e07e"
}
substs: [
  "Graph2TacConfig.v"
]
